# propertyagentscrapper

./: cargo.toml  name.txt  rawdata.txt
scrapper/: Cargo.toml
scrapper/src/: main.rs
ui/: Cargo.toml
ui/src/: handler.rs  main.rs
