[package]
name = "scrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thirtyfour = "0.28.1"
tokio = { version = "1.17.0", features = ["full"] }
select = "0.5.0"
rand = "0.8.4"
serde = { version = "1.0.131", features = ["derive"] }
serde_json = "1.0.72"